--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
     crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="stylesheet" href="./mobile-style.css">
+  <link rel="stylesheet" href="src/style.css" />
+  <link rel="stylesheet" href="src/mobile-style.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
           </button>
         </div>
         <div class="col-md-5 col-sm-12  h-25">
-          <img src="../assets/fitness.png" alt="Book" />
+          <img src="assets/fitness.png" alt="Book" />
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-md-6 col-12">
             <div class="pray">
-              <img src="../assets/gabe.jpg" alt="Pray" class="" />
+              <img src="assets/gabe.jpg" alt="Pray" class="" />
             </div>
           </div>
           <div class="col-md-6 col-12">
@@ -231,7 +231,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../assets/steve.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="assets/steve.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Steven De Smidt</h3>
@@ -250,7 +250,7 @@
                   <div class="carousel-item active">
                     <div class="card mr-2 d-inline-block shadow">
                       <div class="card-img-top">
-                        <img src="../assets/yoda.png" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="assets/yoda.png" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Luis Calderon</h3>
@@ -266,7 +266,7 @@
                   <div class="carousel-item">
                     <div class="card  d-inline-block mr-2 shadow">
                       <div class="card-img-top">
-                        <img src="../assets/andy.png" class="img-fluid rounded-circle w-50 p-4" alt="">
+                        <img src="assets/andy.png" class="img-fluid rounded-circle w-50 p-4" alt="">
                       </div>
                       <div class="card-body">
                         <h3 class="card-title">Andres Ortiz</h3>
@@ -285,7 +285,7 @@
         <div class="col-md-4 col-12 text-center">
             <div class="card mr-2 d-inline-block shadow-lg">
                 <div class="card-img-top">
-                  <img src="../assets/pat.jpg" class="img-fluid border-radius p-4" alt="">
+                  <img src="assets/pat.jpg" class="img-fluid border-radius p-4" alt="">
                 </div>
                 <div class="card-body">
                   <h3 class="card-title">Patricia Rehn</h3>
@@ -346,7 +346,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
+  <script src="src/main.js"></script>
 </body>
 
 </html>
