--- a/index.html
+++ b/index.html
@@ -29,27 +29,24 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">HOME
+              <a class="nav-link" href="#">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">COURSE</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">PRICE</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item dropdown">
               <div class="dropdown">
-                <a href="#" class="nav-link">PAGES</a>
-                <div class="dropdown-content">
+                <a href="#prices" class="nav-link">Prices</a>
+                <!-- <div class="dropdown-content">
                   <a href="#">Generic</a>
                   <a href="#">Element</a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#clients">Clients</a>
             </li>
           </ul>
         </div>
@@ -74,7 +71,7 @@
     </div>
   </header>
   <main>
-    <section class="section-1">
+    <section id="about" class="section-1">
       <div class="container text-center">
         <div class="row">
           <div class="col-md-6 col-12">
@@ -99,7 +96,7 @@
         </div>
       </div>
     </section>
-    <section class="section-2 container-fluid p-0">
+    <section id="prices" class="section-2 container-fluid p-0">
       <div class="cover">
         <div class="overlay"></div>
         <div class="content text-center">
@@ -222,7 +219,7 @@
     </section>
 
     <!-- Section 4 -->
-    <section class="section-4">
+    <section id="clients" class="section-4">
       <div class="container text-center">
         <h1 class="text-dark">What our Clients Say about us</h1>
         <p class="text-secondary">Lorem ipsum dolor sit amet.</p>
